# ez-tickets-admin

./: .editorconfig  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: workflow-biome.yml
.github/workflows/: biome.yml
src/: app.tsx  global.css.ts  main.tsx  mockData.ts  routing.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client.rs  commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: categories.rs  products.rs
src-tauri/src/models/: categories.rs  products.rs
src/Login/: Login.tsx
src/admin/: Admin.css.ts  Admin.tsx
src/admin/components/: Contents.tsx  Input.tsx  InputContainer.tsx  InputImg.tsx  SideBar.tsx  SideBarLabel.tsx
src/admin/store/: ModalStateStore.ts  RegisteredEditStore.ts  RegistrationStore.ts
src/application/: TitleBar.tsx  Titlebar.css.ts
src/applications/: titlebar.tsx
src/applications/styles/: titlebar.css.ts
src/cmds/: categories.ts  products.ts
src/components/: Header.tsx  Input.tsx  InputContainer.tsx  InputImg.tsx
src/components/style/: InputImg.css.ts
src/login/: Login.tsx
src/parts/: CheckBox.tsx  ExecuteButton.tsx  ExecuteButtonContainer.tsx  Header.tsx  Input.tsx  InputContainer.tsx  InputImg.tsx  Labels.tsx  ListContainer.tsx  ListHeader.tsx  ListItem.tsx  PullDown.tsx  TextArea.tsx
src/parts/style/: CheckBox.css.ts  ExecuteButton.css.ts  ExecuteButtonContainer.css.ts  Header.css.ts  Input.css.ts  InputContainer.css.ts  InputImg.css.ts  Labels.css.ts  ListContainer.css.ts  input.css.ts  (+5 more)
(+299 files in other folders)
