[package]
name = "ez-tickets-admin"
version = "0.1.0"
description = "A Tauri Routing"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ez_tickets_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "^1", features = ["serde"] }

thiserror = "^2"
error-stack = "^0.5"

reqwest = { version = "^0.12", features = ["json", "multipart", "native-tls"] }
